--- a/sidepanel/sidepanel.css
+++ b/sidepanel/sidepanel.css
@@ -1,22 +1,1 @@
-:root {
-    background-color: #222;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1;
-    box-sizing: border-box;
-
-    --popup-width: 400px;
-    --popup-height: 100%;
-}
-
-body {
-    padding: 0.5rem;
-    width: var(--popup-width);
-    height: var(--popup-height);
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-}
+@import url("../css/base.css");
