- updated base css

--- a/css/base.css
+++ b/css/base.css
@@ -1,12 +1,37 @@
 :root {
     --bg-color: #222;
     --font-color: white;
+    --font-family: 'Roboto', sans-serif;
 
     background-color: var(--bg-color);
     color: var(--font-color);
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family);
     font-size: 16px;
     font-weight: 400;
     line-height: 1;
     box-sizing: border-box;
+}
+
+body {
+    padding: 0.5rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0 0 1rem 0;
+}
+
+input, textarea, button {
+    font-family: var(--font-family);
+    background-color: black;
+    padding: .5rem 1rem;
+    color: white;
+    cursor: pointer;
+}
+
+button {
+    border: 1px solid transparent;
+    border-radius: calc(1rem / 7);
+    &:hover {
+        border-color: #333;
+    }
 }
