- minor base styles tweaks - changed dc rem-scale to base-unit

--- a/css/base.css
+++ b/css/base.css
@@ -12,11 +12,16 @@
     box-sizing: border-box;
 }
 
+html {
+    min-height: 100vh;
+}
+
 body {
     padding: 0.5rem;
 }
 
-main, form {
+main {
+    position: relative;
     display: flex;
     flex-flow: column;
     gap: 0.5rem;
