--- a/ui/tab/tab.css
+++ b/ui/tab/tab.css
@@ -1,1 +1,19 @@
 @import url("../../css/base.css");
+
+body {
+    position: absolute;
+    inset: 0;
+}
+
+main {
+    justify-content: center;
+    align-items: center;
+    gap: 6.667%;
+    height: 100%;
+}
+
+@media screen and (width > 1600px) {
+    main {
+        flex-flow: row nowrap;
+    }
+}
